crates/tests/libs/bindgen/data/error/writer_missing_enum_type/defs-platform.rdl
#[win32]
mod Defs {
    #[repr(i32)]
    #[flags]
    enum Platform { X86 = 1, X64 = 2, Arm64 = 4, }
    attribute SupportedPlatformAttribute { fn(value: Platform); }
}
